// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      settings.pr_decoration.title
    </h1>
  </header>
  <div
    className="markdown small spacer-top big-spacer-bottom"
  >
    settings.pr_decoration.description
  </div>
  <BoxedTabs
    onSelect={[MockFunction]}
    selected="github"
    tabs={
      Array [
        Object {
          "key": "github",
          "label": "Github Enterprise",
        },
        Object {
          "key": "bitbucket",
          "label": "Bitbucket Server",
        },
        Object {
          "key": "azure",
          "label": "Azure DevOps Server",
        },
      ]
    }
  />
  <div
    className="boxed-group boxed-group-inner"
  >
    <GithubTab
      definitions={Array []}
      loading={true}
      onDelete={[MockFunction]}
      onUpdateDefinitions={[MockFunction]}
    />
  </div>
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      settings.pr_decoration.title
    </h1>
  </header>
  <div
    className="markdown small spacer-top big-spacer-bottom"
  >
    settings.pr_decoration.description
  </div>
  <BoxedTabs
    onSelect={[MockFunction]}
    selected="github"
    tabs={
      Array [
        Object {
          "key": "github",
          "label": "Github Enterprise",
        },
        Object {
          "key": "bitbucket",
          "label": "Bitbucket Server",
        },
        Object {
          "key": "azure",
          "label": "Azure DevOps Server",
        },
      ]
    }
  />
  <div
    className="boxed-group boxed-group-inner"
  >
    <GithubTab
      definitions={Array []}
      loading={false}
      onDelete={[MockFunction]}
      onUpdateDefinitions={[MockFunction]}
    />
  </div>
  <DeleteModal
    id="keyToDelete"
    onCancel={[MockFunction]}
    onDelete={[MockFunction]}
  />
</Fragment>
`;

exports[`should render correctly 3`] = `
<Fragment>
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      settings.pr_decoration.title
    </h1>
  </header>
  <div
    className="markdown small spacer-top big-spacer-bottom"
  >
    settings.pr_decoration.description
  </div>
  <BoxedTabs
    onSelect={[MockFunction]}
    selected="azure"
    tabs={
      Array [
        Object {
          "key": "github",
          "label": "Github Enterprise",
        },
        Object {
          "key": "bitbucket",
          "label": "Bitbucket Server",
        },
        Object {
          "key": "azure",
          "label": "Azure DevOps Server",
        },
      ]
    }
  />
  <div
    className="boxed-group boxed-group-inner"
  >
    <AzureTab
      definitions={Array []}
      loading={false}
      onDelete={[MockFunction]}
      onUpdateDefinitions={[MockFunction]}
    />
  </div>
</Fragment>
`;

exports[`should render correctly 4`] = `
<Fragment>
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      settings.pr_decoration.title
    </h1>
  </header>
  <div
    className="markdown small spacer-top big-spacer-bottom"
  >
    settings.pr_decoration.description
  </div>
  <BoxedTabs
    onSelect={[MockFunction]}
    selected="github"
    tabs={
      Array [
        Object {
          "key": "github",
          "label": "Github Enterprise",
        },
        Object {
          "key": "bitbucket",
          "label": "Bitbucket Server",
        },
        Object {
          "key": "azure",
          "label": "Azure DevOps Server",
        },
      ]
    }
  />
  <div
    className="boxed-group boxed-group-inner"
  >
    <GithubTab
      definitions={Array []}
      loading={false}
      onDelete={[MockFunction]}
      onUpdateDefinitions={[MockFunction]}
    />
  </div>
</Fragment>
`;
